--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://datasciencezimbabwe.github.io/dszblog/" />
 <meta property="og:url" content="https://datasciencezimbabwe.github.io/dszblog/" />
 <meta property="og:site_name" content="data science zimbabwe blog" />
-<meta property="og:image" content="https://datasciencezimbabwe.github.io/dszblog/images/logo.png" />
+<meta property="og:image" content="https://datasciencezimbabwe.github.io/dszblog/images/logo%20(2).png" />
 <script type="application/ld+json">
-{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","url":"https://datasciencezimbabwe.github.io/dszblog/","@type":"WebSite","headline":"data science zimbabwe blog","image":"https://datasciencezimbabwe.github.io/dszblog/images/logo.png","name":"data science zimbabwe blog","@context":"https://schema.org"}</script>
+{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","url":"https://datasciencezimbabwe.github.io/dszblog/","@type":"WebSite","headline":"data science zimbabwe blog","image":"https://datasciencezimbabwe.github.io/dszblog/images/logo%20(2).png","name":"data science zimbabwe blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/dszblog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://datasciencezimbabwe.github.io/dszblog/feed.xml" title="data science zimbabwe blog" /><link rel="shortcut icon" type="image/x-icon" href="/dszblog/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
