--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo (2).png
+image: images/log1.png
 ---
 
 Welcome to the blog of Data Science Zimbabwe. Join us on our journey, as we share our experiences, work and interests as we aim to engage, as Zimbabweans, in the advances in data science, machine learning and AI.
